# Focusguard

./: README.md  index.html  server.py
focusguard/: .gitignore  FocusGuard_Roadmap.md  focusguard.py  pyproject.toml  requirements.txt
focusguard/examples/: basic_usage.py
focusguard/focusguard/: __init__.py  app.py  config.py  session_logger.py
focusguard/focusguard/core/: __init__.py  eye_tracker.py  face_detector.py  focus_score.py  gaze_estimator.py  head_pose.py
focusguard/focusguard/utils/: __init__.py  overlay.py
focusguard/tests/: test_eye_tracker.py  test_focus_score.py
